--- a/src/components/Main.sass
+++ b/src/components/Main.sass
@@ -1,13 +1,5 @@
-h3
-  margin: 40px 0 0
-
-ul
-  list-style-type: none
-  padding: 0
-
-li
-  display: inline-block
-  margin: 0 10px
-
-a
-  color: #42b983
+.main
+  display: flex
+  flex-direction: column
+  height: 100%
+  outline: 1px solid red
