add Header and Promo sections

--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -1,3 +1,5 @@
+@import "src/styles/config"
+
 .header
   width: 100%
   max-width: 946px
@@ -5,6 +7,12 @@
   border-bottom: 1px solid #828282
   padding: 30px 0 34px 0
   flex: 0 0 auto
+
+  +max-width($tablet)
+    padding: 30px 25px 34px
+
+  +max-width($mobile)
+    display: none
 
   nav
     display: flex
