--- a/src/components/Content/Promo/Promo.sass
+++ b/src/components/Content/Promo/Promo.sass
@@ -1,11 +1,13 @@
 @import "src/styles/config"
 
 .promo
+  max-width: 940px
+  margin: 0 auto
   padding: 32px 0 0 0
   +max-width($tablet)
-    padding: 32px 25px 0
+    padding: 32px 35px 0
   +max-width($mobile)
-    padding: 45px 20px 0
+    padding: 45px 30px 0
 
   &-main
     &__text
@@ -71,8 +73,6 @@
     +max-width($mobile)
       display: block
       margin-left: auto
-
-
 
 .header-mobile
   +max-width($mobile)
