--- a/src/components/Content/Promo/Promo.sass
+++ b/src/components/Content/Promo/Promo.sass
@@ -2,12 +2,13 @@
 
 .promo
   max-width: 940px
-  margin: 0 auto
-  padding: 32px 0 0 0
+  margin: 100px auto 0 auto
+  padding: 32px 0 104px
   +max-width($tablet)
-    padding: 32px 35px 0
+    padding: 32px 35px 80px
+    margin: 0 auto 0 auto
   +max-width($mobile)
-    padding: 45px 30px 0
+    padding: 45px 30px 60px
 
   &-main
     &__text
