--- a/src/components/Footer/Footer.sass
+++ b/src/components/Footer/Footer.sass
@@ -1,5 +1,36 @@
+@import "src/styles/config"
+
 .footer
   width: 100%
   max-width: 940px
   margin: 0 auto
   flex: 0 0 auto
+  padding: 80px 0 60px
+  +max-width($tablet)
+    padding: 32px 35px 40px
+  +max-width($mobile)
+    padding: 45px 30px 40px
+
+  &__title
+    font: 400 34px/42px 'Gilroy-Bold'
+    text-align: center
+    color: #070707
+    margin-bottom: 30px
+    +max-width($mobile)
+      font-size: 26px
+      line-height: 100%
+
+  &__subtitle
+    font: 400 18px/22px 'Gilroy-Bold'
+    text-align: center
+    margin-bottom: 25px
+
+  &__text
+    font: 400 18px/22px 'Gilroy-Medium'
+    color: #070707
+    margin-bottom: 15px
+    text-align: center
+
+    span, a
+      font-weight: 700
+      color: #070707
